--- a/app/views/admin/home.ejs
+++ b/app/views/admin/home.ejs
@@ -31,7 +31,7 @@
           <!-- Small boxes (Stat box) -->
           <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-3 col-xs-6">
+                <div class="col-lg-3 col-xs-6"  onclick="window.location.href = '/listCategory';" style="cursor: pointer;">
                   <!-- small box -->
                   <div class="small-box bg-aqua">
                     <div class="inner">
@@ -44,7 +44,7 @@
                     <a href="/listCategory" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
                   </div>
                 </div><!-- ./col -->
-                <div class="col-lg-3 col-xs-6">
+                <div class="col-lg-3 col-xs-6"  onclick="window.location.href = '/listSubCategory';" style="cursor: pointer;">
                   <!-- small box -->
                   <div class="small-box bg-green">
                     <div class="inner">
@@ -57,7 +57,7 @@
                     <a href="/listSubCategory" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
                   </div>
                 </div><!-- ./col -->
-                <div class="col-lg-3 col-xs-6">
+                <div class="col-lg-3 col-xs-6" onclick="window.location.href = '/customer';" style="cursor: pointer;">
                   <!-- small box -->
                   <div class="small-box bg-yellow">
                     <div class="inner">
@@ -70,7 +70,7 @@
                     <a href="/customer" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
                   </div>
                 </div><!-- ./col -->
-                <div class="col-lg-3 col-xs-6">
+                <div class="col-lg-3 col-xs-6" onclick="window.location.href = '/artist';" style="cursor: pointer;">
                   <!-- small box -->
                   <div class="small-box bg-red">
                     <div class="inner">
@@ -83,7 +83,7 @@
                     <a href="/artist" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
                   </div>
                 </div><!-- ./col -->
-                <div class="col-lg-3 col-xs-6">
+                <div class="col-lg-3 col-xs-6" onclick="window.location.href = '/total_services';" style="cursor: pointer;">
                   <!-- small box -->
                   <div class="small-box bg-maroon">
                     <div class="inner">
