--- a/public/front/css/loader.css
+++ b/public/front/css/loader.css
@@ -5,7 +5,7 @@
    }
    .loading {
    position: fixed;
-   z-index: 9993;
+   z-index: 999999995;
    height: 2em;
    width: 2em;
    overflow: show;
